# esaydo

./: .gitignore  EasyDo_Project_Init_Document.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: EasyDo_Light_Mode_UI_Style_Guide.md  EasyDo_UI_Style_Guide.md
docs/daily/: daily_20260604.md
openspec/: config.yaml
openspec/changes/add-cli-and-agent-skills/: design.md  proposal.md  tasks.md
openspec/changes/add-inbox-triage-and-retention/: design.md  proposal.md  tasks.md
openspec/changes/implement-first-phase-mvp/: design.md  proposal.md  tasks.md
openspec/changes/polish-keyboard-settings-shadcn/: design.md  proposal.md  tasks.md
openspec/changes/redesign-board-view-navigation/: design.md  proposal.md  tasks.md
scripts/: build-dmg.sh  build-install-arm.sh  build-install-intel.sh  prepare-cli.sh  verify-macos-bundle.sh
skills/: manifest.json
skills/easydo/: SKILL.md
src/: App.test.tsx  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/core/: cli_install.rs  db.rs  error.rs  mod.rs  models.rs  selectors.rs  skills.rs  todo_service.rs  workspace_service.rs
src-tauri/tests/: cli.rs
src/components/board/: BoardViewSwitcher.test.tsx  BoardViewSwitcher.tsx  GroupSection.test.tsx  GroupSection.tsx  (+2 more)
src/lib/: api.ts  checklist.ts  dates.ts  shortcuts.ts  theme.ts
src/pages/: BoardPage.test.tsx  BoardPage.tsx  WeeklyPage.test.tsx  WeeklyPage.tsx
src/test/: setup.ts
(+28 files in other folders)
