[package]
name = "easydo"
version = "0.1.0"
description = "A local-first todo and worklog desktop app"
authors = ["edanhuang"]
edition = "2021"

[lib]
name = "easydo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "easydo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
