[package]
name = "easydo"
version = "0.1.0"
description = "A local-first todo and worklog desktop app"
authors = ["edanhuang"]
edition = "2021"
default-run = "easydo"

[lib]
name = "easydo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "easydo"
path = "src/main.rs"

[[bin]]
name = "easydo-cli"
path = "src/bin/easydo-cli.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
